--- a/index.html
+++ b/index.html
@@ -20,25 +20,27 @@
         <div class="logo-wrap">
           <img src="images/logo.svg" alt="Logo">
         </div>
-        <div>
+        <div class="mobile-icon">
           <img class="mobile-nav" src="images/icon-hamburger.svg" alt="">
+        </div>
+        <div class="main-menu">
           <nav class="menu">
             <ul>
-              <li>About</li>
-              <li>Services</li>
-              <li>Projects</li>
-              <li>Contact</li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Projects</a></li>
+              <li><a href="#">Contact</a></li>
             </ul>
           </nav>
         </div>
       </div>
       <div class="banner-wrap">
         <h1>We are creatives</h1>
-        <img src="images/icon-arrow-down.svg" alt="">
+        <a href="#content"><img src="images/icon-arrow-down.svg" alt=""></a>
       </div>
     </header>
 
-    <div class="section section-1">
+    <div id="content" class="section section-1">
       <div class="container">
         <div class="col col-img">
           <img src="images/mobile/image-transform.jpg" alt="">
@@ -60,7 +62,7 @@
         <div class="col col-content">
           <h2>Stand out to the right audience</h2>
           <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places. </p>
-          <a href="#">Learn more</a>
+          <a class="link-2" href="#">Learn more</a>
         </div>
       </div>
     </div>
@@ -122,7 +124,7 @@
     </div>
 
     <footer>
-      <img src="images/logo.svg" alt="logo footer">
+      <img class="logo-footer" src="images/logo-footer.svg" alt="logo footer">
       <nav class="footer-menu">
         <ul>
           <li>About</li>
