--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </header>
 
     <div id="content" class="section section-1">
-      <div class="container">
+      <div class="container grid">
         <div class="col col-img">
           <img src="images/mobile/image-transform.jpg" alt="">
         </div>
@@ -55,7 +55,7 @@
     </div>
 
     <div class="section section-2">
-      <div class="container">
+      <div class="container grid">
         <div class="col col-img">
           <img src="images/mobile/image-stand-out.jpg" alt="">
         </div>
@@ -68,7 +68,7 @@
     </div>
 
     <div class="section section-3">
-      <div class="container">
+      <div class="container grid full">
         <div class="col col-graph">
           <h3>Graphic design</h3>
           <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
@@ -83,42 +83,48 @@
     <div class="section section-4">
       <div class="container">
         <h2>Client testimonials</h2>
-        <div class="col">
-          <img src="images/image-emily.jpg" alt="Emily">
-          <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
-          <p class="name">Emily R.</p>
-          <p class="role"> Marketing Director</p>
-        </div>
-
-        <div class="col">
-          <img src="images/image-thomas.jpg" alt="Thomas">
-          <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
-          <p class="name">Thomas S.</p>
-          <p class="role">Chief Operating Officer</p>
-        </div>
-
-        <div class="col">
-          <img src="images/image-jennie.jpg" alt="Jennie">
-          <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
-          <p class="name">Jennie F.</p>
-          <p class="role"> Business Owner</p>
+        <div class="testi-wrap grid">
+          <div class="col">
+            <img src="images/image-emily.jpg" alt="Emily">
+            <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+            <p class="name">Emily R.</p>
+            <p class="role"> Marketing Director</p>
+          </div>
+  
+          <div class="col">
+            <img src="images/image-thomas.jpg" alt="Thomas">
+            <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+            <p class="name">Thomas S.</p>
+            <p class="role">Chief Operating Officer</p>
+          </div>
+  
+          <div class="col">
+            <img src="images/image-jennie.jpg" alt="Jennie">
+            <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+            <p class="name">Jennie F.</p>
+            <p class="role"> Business Owner</p>
+          </div>
         </div>
       </div>
     </div>
     
     <div class="section section-5">
-      <div class="container">
+      <div class="container full">
         <div class="col">
           <img  class="mobile-img" src="images/mobile/image-gallery-milkbottles.jpg" alt="">
+          <img  class="desktop-img" src="images/desktop/image-gallery-milkbottles.jpg" alt="">
         </div>
         <div class="col">
           <img  class="mobile-img" src="images/mobile/image-gallery-orange.jpg" alt="">
+          <img  class="desktop-img" src="images/desktop/image-gallery-orange.jpg" alt="">
         </div>
         <div class="col">
           <img  class="mobile-img" src="images/mobile/image-gallery-cone.jpg" alt="">
+          <img  class="desktop-img" src="images/desktop/image-gallery-cone.jpg" alt="">
         </div>
         <div class="col">
           <img  class="mobile-img" src="images/mobile/image-gallery-sugar-cubes.jpg" alt="">
+          <img  class="desktop-img" src="images/desktop/image-gallery-sugarcubes.jpg" alt="">
         </div>
       </div>
     </div>
@@ -127,9 +133,9 @@
       <img class="logo-footer" src="images/logo-footer.svg" alt="logo footer">
       <nav class="footer-menu">
         <ul>
-          <li>About</li>
-          <li>Services</li>
-          <li>Projects</li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Projects</a></li>
         </ul>
       </nav>
       <div class="social-media">
