--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </div>
       <div class="banner-wrap">
         <h1>We are creatives</h1>
-        <a href="#content"><img src="images/icon-arrow-down.svg" alt=""></a>
+        <a href="#content"><img src="images/icon-arrow-down.svg" alt="Arrow Down"></a>
       </div>
     </header>
 
@@ -140,10 +140,10 @@
       </nav>
       <div class="social-media">
         <ul>
-          <li><a href="#"><img src="images/icon-facebook.svg" alt=""></a></li>
-          <li><a href="#"><img src="images/icon-instagram.svg" alt=""></a></li>
-          <li><a href="#"><img src="images/icon-twitter.svg" alt=""></a></li>
-          <li><a href="#"><img src="images/icon-pinterest.svg" alt=""></a></li>
+          <li><a href="#"><img src="images/icon-facebook.svg" alt="Facebook"></a></li>
+          <li><a href="#"><img src="images/icon-instagram.svg" alt="Instagram"></a></li>
+          <li><a href="#"><img src="images/icon-twitter.svg" alt="Twitter"></a></li>
+          <li><a href="#"><img src="images/icon-pinterest.svg" alt="Pinterest"></a></li>
         </ul>
       </div>
     </footer>
